--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-es6-template-engine": "^2.1.7",
-    "pg-promise": "^8.6.4"
+    "express-session": "^1.15.6",
+    "pg-promise": "^8.6.4",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
